@@ -1,7 +1,7 @@
 package Bread::Board::Literal;
 use Moose;
 
-our $VERSION   = '0.14';
+our $VERSION   = '0.15';
 our $AUTHORITY = 'cpan:STEVAN';
 
 with 'Bread::Board::Service';
