@@ -1,7 +1,7 @@
 package Bread::Board::Service::Deferred::Thunk;
 use Moose;
 
-our $VERSION   = '0.14';
+our $VERSION   = '0.15';
 our $AUTHORITY = 'cpan:STEVAN';
 
 has 'thunk' => (
